Web Inspector: [Regression] [Mavericks]: Undocked Web Inspector toolbar is two different colors and has extra space https://bugs.webkit.org/show_bug.cgi?id=148510
Make body element transparent and remove extra padding above the toolbar only for OS X Mavericks.

Reviewed by Timothy Hatcher.

* UserInterface/Base/Main.js:
(WebInspector.contentLoaded):
* UserInterface/Views/Main.css:
(body:not(.mavericks)):
(body): Deleted.
* UserInterface/Views/Toolbar.css:
(body:not(.mavericks) .toolbar):
(body.window-inactive:not(.mavericks) .toolbar):
(body.mac-platform:not(.docked, .mavericks) .toolbar):
(.toolbar): Deleted.
(body.window-inactive .toolbar): Deleted.
(body.mac-platform:not(.docked) .toolbar): Deleted.


Canonical link: https://commits.webkit.org/166609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189011 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/Toolbar.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Toolbar.css
@@ -29,9 +29,6 @@
     white-space: nowrap;
     overflow: hidden;
 
-    background-image: linear-gradient(to bottom, hsl(0, 0%, 92%), hsl(0, 0%, 87%));
-    box-shadow: inset hsla(0, 0%, 100%, 0.5) 0 1px 1px;
-
     outline: none;
 
     padding-top: 3px;
@@ -39,12 +36,17 @@
     height: 36px;
 }
 
-body.window-inactive .toolbar {
+body:not(.mavericks) .toolbar {
+    background-image: linear-gradient(to bottom, hsl(0, 0%, 92%), hsl(0, 0%, 87%));
+    box-shadow: inset hsla(0, 0%, 100%, 0.5) 0 1px 1px;
+}
+
+body.window-inactive:not(.mavericks) .toolbar {
     background-image: none;
     background-color: hsl(0, 0%, 96%);
 }
 
-body.mac-platform:not(.docked) .toolbar {
+body.mac-platform:not(.docked, .mavericks) .toolbar {
     padding-top: 21px;
     height: 54px;
 }
